fixed_records api
