# openapi/go/api.go
@@ -16,6 +16,13 @@ import (
 
 
 
+// FixedRecordsApiRouter defines the required methods for binding the api requests to a responses for the FixedRecordsApi
+// The FixedRecordsApiRouter implementation should parse necessary information from the http request, 
+// pass the data to a FixedRecordsApiServicer to perform the required actions, then write the service results to the http response.
+type FixedRecordsApiRouter interface { 
+	GetFixedRecords(http.ResponseWriter, *http.Request)
+	UpdateFixedRecord(http.ResponseWriter, *http.Request)
+}
 // RecommendedRecordsApiRouter defines the required methods for binding the api requests to a responses for the RecommendedRecordsApi
 // The RecommendedRecordsApiRouter implementation should parse necessary information from the http request, 
 // pass the data to a RecommendedRecordsApiServicer to perform the required actions, then write the service results to the http response.
@@ -27,6 +34,16 @@ type RecommendedRecordsApiRouter interface {
 // pass the data to a RecordsApiServicer to perform the required actions, then write the service results to the http response.
 type RecordsApiRouter interface { 
 	PostRecords(http.ResponseWriter, *http.Request)
+}
+
+
+// FixedRecordsApiServicer defines the api actions for the FixedRecordsApi service
+// This interface intended to stay up to date with the openapi yaml used to generate it, 
+// while the service implementation can ignored with the .openapi-generator-ignore file 
+// and updated with the logic required for the API.
+type FixedRecordsApiServicer interface { 
+	GetFixedRecords(context.Context, bool) (ImplResponse, error)
+	UpdateFixedRecord(context.Context, string, FixedRecordViewModel) (ImplResponse, error)
 }
 
 
